--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,10 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 #root {
